-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: None
-
Component/s: client-libs
-
None
-
b96
SQE (Yuri) reported a crash in a test called TextDrawer but
it is unrelated to text. It does not get that far :
This one line program crashes the JDK on Windows :
public class GSS {
public static void main(String s[]) {
java.awt.Toolkit.getDefaultToolkit().getScreenSize();
}
}
Seen so far with 64 bit JRE on WIndows 7 but probably not
limited to that,
it is unrelated to text. It does not get that far :
This one line program crashes the JDK on Windows :
public class GSS {
public static void main(String s[]) {
java.awt.Toolkit.getDefaultToolkit().getScreenSize();
}
}
Seen so far with 64 bit JRE on WIndows 7 but probably not
limited to that,
- relates to
-
JDK-8149151 Use local GraphicsEnvironment to get screen size in WToolkit
-
- Resolved
-
-
JDK-8073320 Windows HiDPI Graphics support
-
- Resolved
-
-
JDK-8145785 [TEST_BUG] java/awt/Toolkit/GetSizeTest/GetScreenSizeTest.java: incorrect name
-
- Resolved
-