8144074: [PIT] Crash calling Toolkit.getScreenSize() on Windows

Reviewed-by: flar